--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,9 @@ header {
   background: var(--secondary);
   padding: 30px 25px;
   border-bottom: 5px solid var(--primary);
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
 }
 
 header p {
@@ -36,6 +39,9 @@ header p {
 p,
 li {
   font-size: 1.6rem;
+}
+.hide {
+    display: none;
 }
 
 @media screen and (max-width: 980px) {
