--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-  --primary: rgb(40, 5, 63);
+  --primary: rgb(66, 21, 95);
   --secondary: #852399;
   --tertiary: rgb(252, 248, 248);
   font-size: 62.5%;
@@ -14,7 +14,6 @@ body {
   color: var(--grey);
   margin: 15px;
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -33,21 +32,54 @@ header p {
   font-size: 2rem;
 }
 
-.landing-page {
+section h1 {
   text-align: center;
+  font-size: 35px;
  
 }
 
-.landing-page h1 {
+section h2 {
   font-size: 35px;
 }
 
-.landing-page p {
+section h3 {
+  text-align: left;
+  font-size: 30px;
+ 
+}
+
+section p {
   font-size: 25px;
 }
 
+section {
+  margin: 1px 250px;
+}
+
 .instructions {
-  margin: 1px 200px;
+  text-align: center;
+}
+
+.options {
+  padding-top: 20px;
+  display: block;
+  margin-top: 10px;
+}
+.start-button {
+  text-align: center;
+}
+
+button {
+  color: white;
+  background-color: var(--primary);
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+}
+
+button:hover {
+  background-color:var(--secondary); 
 }
 
 .show {
@@ -59,21 +91,7 @@ header p {
 }
 
 .answer-options {
-  display: block;
-  margin-top: 10px;
-}
-
-.title-section button {
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 10px;
-}
-
-.title-section button:hover {
-    background-color:var(--tertiary-color);  
+  
 }
 
 @media screen and (max-width: 980px) {
